feat: agregar microservicio de especialistas

--- a/especialistas/src/main/resources/application.properties
+++ b/especialistas/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.application.name=sistema-citas
+spring.application.name=especialistas-service
+spring.data.mongodb.uri=mongodb://localhost:27017/nailspa
+spring.data.mongodb.database=nailspa
+server.port=8081
