--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.3</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>3.3.13</version>
+		<relativePath/>
 	</parent>
 	<groupId>com.equipo</groupId>
-	<artifactId>sistema-citas</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>sistema-citas</name>
-	<description>Demo project for Spring Boot</description>
+	<artifactId>nailspa</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+	<name>nailspa</name>
+	<packaging>pom</packaging>
 	<url/>
 	<licenses>
 		<license/>
@@ -30,55 +30,20 @@
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
+		<!-- Dependencias comunes mínimas para todos los módulos -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-mail</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-validation</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
+			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-test</artifactId>
-			<scope>test</scope>
-		</dependency>
 	</dependencies>
-
+	<modules>
+		<module>billing</module>
+	</modules>
 	<build>
 		<plugins>
 			<plugin>
@@ -107,5 +72,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
