--- a/appointment/src/main/resources/application.properties
+++ b/appointment/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.application.name=neilspa
-spring.data.mongodb.database=neilspa_appointment
-spring.data.mongodb.uri=mongodb+srv://billysteven011:billysteven011@cluster0.hh3zocb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-server.port=8081
+spring.application.name=appointment
+spring.data.mongodb.database=nailspa_appointment
+spring.data.mongodb.uri=mongodb://mongodb:27017/nailspa-appointment?directConnection=true&serverSelectionTimeoutMS=2000
+server.port=8085
+
+# Logging
+logging.level.org.springframework.data.mongodb=DEBUG
