--- a/clientes/src/main/resources/application.properties
+++ b/clientes/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.application.name=sistema-citas
-spring:
-data:
-mongodb:
-uri:mongodb://localhost:27017/spa_clientes
+spring.application.name=clientes
 
+spring.data.mongodb.uri=mongodb://mongodb:27017/nailspa-clientes?directConnection=true&serverSelectionTimeoutMS=2000
+spring.data.mongodb.database=nailspa_clientes
+
+server.port=8087
+
+logging.level.org.springframework.data.mongodb=DEBUG
