--- a/especialistas/pom.xml
+++ b/especialistas/pom.xml
@@ -116,7 +116,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<mainClass>com.nailspa.especialistas</mainClass>
+					<mainClass>com.nailspa.especialistas.EspecialistasApplication</mainClass>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
