--- a/especialistas/src/main/resources/application.properties
+++ b/especialistas/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-spring.application.name=especialistas-service
-spring.data.mongodb.uri=mongodb://localhost:27017/nailspa
-spring.data.mongodb.database=nailspa
-server.port=8081
+spring.application.name=especialistas
+
+spring.data.mongodb.uri=mongodb://mongodb:27017/nailspa-especialistas?directConnection=true&serverSelectionTimeoutMS=2000
+spring.data.mongodb.database=nailspa_especialistas
+
+server.port=8084
+
+logging.level.org.springframework.data.mongodb=DEBUG
