--- a/auth/pom.xml
+++ b/auth/pom.xml
@@ -39,6 +39,7 @@
                 <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+                
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -98,6 +99,12 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+        <groupId>jakarta.validation</groupId>
+        <artifactId>jakarta.validation-api</artifactId>
+        <version>3.0.2</version>
+        </dependency>
+
     </dependencies>
 
 	<build>
@@ -122,7 +129,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.equipo.login</mainClass>
+                    <mainClass>com.equipo.login.SistemaCitasApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
