--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-spring.application.name=sistema-citas
+spring.application.name=auth
+
+spring.data.mongodb.uri=mongodb://mongodb:27017/nailspa-auth?directConnection=true&serverSelectionTimeoutMS=2000
+spring.data.mongodb.database=nailspa_auth
+
+server.port=8082
+
+logging.level.org.springframework.data.mongodb=DEBUG
