--- a/billing/src/main/resources/application.properties
+++ b/billing/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.application.name=billing
 
 # MongoDB Configuration
-spring.data.mongodb.uri=mongodb://127.0.0.1:27017/nailspa-billing?directConnection=true&serverSelectionTimeoutMS=2000
+spring.data.mongodb.uri=mongodb://mongodb:27017/nailspa-billing?directConnection=true&serverSelectionTimeoutMS=2000
+
 spring.data.mongodb.database=nailspa_billing
 
 # Server Configuration
-server.port=8084
+server.port=8083
 
 # Logging
 logging.level.org.springframework.data.mongodb=DEBUG
